# prism-ros

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml
.github/workflows/: ci.yml
bench/: METHODOLOGY.md  README.md  analyze.py  emit_simple_summary.py  operations.yaml  plot.py  requirements.txt  run.py  style.py
bench/experiments/: v0.2_validation.md
bench/experiments/results/: F1_E1.1_demand.md  F2A_chain_a_b.md  F2_E2.1_probe.md  F2_E2.2_kernel.md  F2_E2.3_a_b.md
bench/experiments/scripts/: cv_remap_4k_bench.py
bench/helpers/: cv_bridge_subscriber_node.py
bench/results/: intel_desktop_simple_summary.md  orin_simple_summary.md
bench/results/intel_phase2_20260427/: aggregate.json
bench/results/intel_phase2_20260427/run1/: chain_20260426T203648Z_meta.json  chain_20260426T203648Z_prism.csv  chain_20260426T203648Z_prism_resources.csv  chain_20260426T203648Z_stock.csv  chain_20260426T203648Z_stock_resources.csv  colorconvert_20260426T203421Z_meta.json  colorconvert_20260426T203421Z_prism.csv  colorconvert_20260426T203421Z_prism_resources.csv  colorconvert_20260426T203421Z_stock.csv  colorconvert_20260426T203421Z_stock_resources.csv  crop_20260426T203154Z_meta.json  crop_20260426T203154Z_prism.csv  crop_20260426T203154Z_prism_resources.csv  crop_20260426T203154Z_stock.csv  crop_20260426T203154Z_stock_resources.csv  resize_20260426T202927Z_meta.json  resize_20260426T202927Z_prism.csv  resize_20260426T202927Z_prism_resources.csv  resize_20260426T202927Z_stock.csv  resize_20260426T202927Z_stock_resources.csv
bench/results/intel_phase2_20260427/run2/: chain_20260426T204634Z_meta.json  chain_20260426T204634Z_prism.csv  chain_20260426T204634Z_prism_resources.csv  chain_20260426T204634Z_stock.csv  chain_20260426T204634Z_stock_resources.csv  colorconvert_20260426T204408Z_meta.json  colorconvert_20260426T204408Z_prism.csv  colorconvert_20260426T204408Z_prism_resources.csv  colorconvert_20260426T204408Z_stock.csv  colorconvert_20260426T204408Z_stock_resources.csv  crop_20260426T204141Z_meta.json  crop_20260426T204141Z_prism.csv  crop_20260426T204141Z_prism_resources.csv  crop_20260426T204141Z_stock.csv  crop_20260426T204141Z_stock_resources.csv  resize_20260426T203914Z_meta.json  resize_20260426T203914Z_prism.csv  resize_20260426T203914Z_prism_resources.csv  resize_20260426T203914Z_stock.csv  resize_20260426T203914Z_stock_resources.csv
bench/results/intel_phase2_20260427/run3/: chain_20260426T205621Z_meta.json  chain_20260426T205621Z_prism.csv  chain_20260426T205621Z_prism_resources.csv  chain_20260426T205621Z_stock.csv  chain_20260426T205621Z_stock_resources.csv  colorconvert_20260426T205355Z_meta.json  colorconvert_20260426T205355Z_prism.csv  colorconvert_20260426T205355Z_prism_resources.csv  colorconvert_20260426T205355Z_stock.csv  colorconvert_20260426T205355Z_stock_resources.csv  crop_20260426T205128Z_meta.json  crop_20260426T205128Z_prism.csv  crop_20260426T205128Z_prism_resources.csv  crop_20260426T205128Z_stock.csv  crop_20260426T205128Z_stock_resources.csv  resize_20260426T204901Z_meta.json  resize_20260426T204901Z_prism.csv  resize_20260426T204901Z_prism_resources.csv  resize_20260426T204901Z_stock.csv  resize_20260426T204901Z_stock_resources.csv
bench/results/v0.2_F2A_intel_4k_20260430/: rectify_chain_20260430T093418Z_meta.json  rectify_chain_20260430T093418Z_prism.csv  rectify_chain_20260430T093418Z_prism_resources.csv  rectify_chain_20260430T093418Z_stock.csv  rectify_chain_20260430T093418Z_stock_resources.csv
bench/results/v0.2_F2A_orin_1080p_20260430/: rectify_chain_20260430T094424Z_meta.json  rectify_chain_20260430T094424Z_prism.csv  rectify_chain_20260430T094424Z_prism_resources.csv  rectify_chain_20260430T094424Z_stock.csv  rectify_chain_20260430T094424Z_stock_resources.csv
bench/results/v0.2_F2A_orin_smoke/: rectify_chain_20260430T094031Z_meta.json  rectify_chain_20260430T094031Z_prism.csv  rectify_chain_20260430T094031Z_prism_resources.csv  rectify_chain_20260430T094031Z_stock_resources.csv
bench/results/v0.2_F2A_smoke/: rectify_chain_20260430T093135Z_meta.json  rectify_chain_20260430T093135Z_prism.csv  rectify_chain_20260430T093135Z_prism_resources.csv  rectify_chain_20260430T093135Z_stock.csv  rectify_chain_20260430T093135Z_stock_resources.csv
bench/results/v0.2_F2_E2.3_intel_1080p_20260430/: rectify_20260430T092343Z_meta.json  rectify_20260430T092343Z_prism.csv  rectify_20260430T092343Z_prism_resources.csv  rectify_20260430T092343Z_stock.csv  rectify_20260430T092343Z_stock_resources.csv
bench/results/v0.2_F2_E2.3_intel_4k_20260430/: rectify_20260430T091910Z_meta.json  rectify_20260430T091910Z_prism.csv  rectify_20260430T091910Z_prism_resources.csv  rectify_20260430T091910Z_stock.csv  rectify_20260430T091910Z_stock_resources.csv
bench/results/v0.2_F2_E2.3_smoke/: rectify_20260430T091546Z_meta.json  rectify_20260430T091546Z_prism.csv  rectify_20260430T091546Z_prism_resources.csv  rectify_20260430T091546Z_stock.csv  rectify_20260430T091546Z_stock_resources.csv
config/: fastdds_no_shm.xml
docs/: PRODUCTION_READINESS.md  index.html
include/gst_adapt_node/: gst_adapt_node.hpp  media_streamer_node.hpp
include/prism_image_proc/: color_convert_node.hpp  crop_node.hpp  hardware_detector.hpp  image_proc_node.hpp  media_streamer_node.hpp  node_options.hpp  pipeline_factory.hpp  rectify_node.hpp  resize_node.hpp  synthetic_4k_pub_node.hpp
launch/: A_B_comparison.launch.py  prism_image_proc_demo.launch.py
scripts/: README.md  dashboard.html  generate_assets.py  visualize_demo.py
src/: README.md  color_convert_node.cpp  crop_node.cpp  gst_adapt_node.cpp  hardware_detector.cpp  image_proc_node.cpp  main.cpp  media_streamer_node.cpp  pipeline_factory.cpp  rectify_node.cpp  resize_node.cpp  synthetic_4k_pub_node.cpp
test/: test_direct_mode_integration.py  test_direct_resize.cpp  test_pipeline_factory.cpp
