<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>prism_image_proc</name>
  <version>0.1.0</version>
  <description>
    Prism — ROS 2 perception acceleration that picks the right path
    through your hardware. A portable image-processing node with
    runtime-adaptive GStreamer backends (NVIDIA NVMM, Intel VA-API) and
    a direct cv::resize fallback. Supports chainable resize, crop, flip,
    and colorconvert actions with matching CameraInfo transforms.
  </description>
  <maintainer email="baremetal@todo.todo">baremetal</maintainer>
  <license>Apache-2.0</license>
  <url type="website">https://sohams25.github.io/prism-ros/</url>
  <url type="repository">https://github.com/sohams25/prism-ros</url>
  <url type="bugtracker">https://github.com/sohams25/prism-ros/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <exec_depend>gst_bridge</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-psutil</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
